[package]
name = "update-ssh-keys"
authors = [ "Stephen Demos <stephen.demos@coreos.com>",
            "Luca Bruno <lucab@debian.org>" ]
license = "Apache-2.0"
repository = "https://github.com/coreos/update-ssh-keys"
documentation = "https://docs.rs/update-ssh-keys"
description = "A tool for managing authorized SSH keys"
version = "0.4.2-alpha.0"
edition = "2021"

[dependencies]
fs2 = "0.4"
# Public dependencies, exposed through library API.
error-chain = { version = "0.12", default-features = false }
clap = { version = "4.4.6", features = ["cargo"] }
uzers = "0.11.3"
openssh-keys = "0.6.2"
lazy_static = "1.4.0"
tempfile = "3.8.0"

[[bin]]
name = "update-ssh-keys"
path = "src/main.rs"
doc = false

[lib]
path = "src/lib.rs"
doc = true

[profile.release]
lto = false

[package.metadata.release]
sign-commit = true
upload-doc = false
disable-push = true
disable-publish = true
pre-release-commit-message = "cargo: update-ssh-keys release {{version}}"
pro-release-commit-message = "cargo: version bump to {{version}}"
tag-message = "update-ssh-keys v{{version}}"
tag-prefix = "v"
